[package]
name = "pyo3_memory_leak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.16", features = ["eyre", "abi3-py37", "auto-initialize"] }

[lib]
name = "pyo3_memory_leak"
crate-type = ["cdylib"]
